<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eunice.criminalintent.CrimeFragment"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:title="@string/app_name"
            android:id="@+id/toolbar_crime_fragment"
            tools:targetApi="lollipop" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="4dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:id="@+id/crime_photo_image_view"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_imageButton"
                android:src="@drawable/ic_photo_camera_black_24dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_title_label"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                style="?android:listSeparatorTextViewStyle"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_title"
                android:hint="@string/crime_title_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/crime_details_label"
                style="?android:listSeparatorTextViewStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crime_date"
            android:layout_weight="2"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label"
            android:id="@+id/crime_solved"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:text="@string/date_of_crime"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="1dp"
            android:id="@+id/date_of_crime"
            android:text="@string/set_date"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:textStyle="italic|bold"
            android:textAlignment="center"
            tools:targetApi="jelly_bean" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:text="@string/time_of_crime"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="1dp"
            android:id="@+id/time_of_crime"
            android:text="@string/set_time"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:textStyle="italic|bold"
            android:textAlignment="center"
            tools:targetApi="jelly_bean" />
    </LinearLayout>


</LinearLayout>
